@@ -5,14 +5,18 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import ro.info.iasi.fiipractic.twitter.dto.request.PostCRUDRequestDto;
 import ro.info.iasi.fiipractic.twitter.dto.request.PostRequestDto;
+import ro.info.iasi.fiipractic.twitter.dto.response.PostLikesResponseDto;
 import ro.info.iasi.fiipractic.twitter.dto.response.PostResponseDto;
 import ro.info.iasi.fiipractic.twitter.model.Post;
 import ro.info.iasi.fiipractic.twitter.model.User;
+import ro.info.iasi.fiipractic.twitter.service.LikeService;
 import ro.info.iasi.fiipractic.twitter.service.PostService;
 import ro.info.iasi.fiipractic.twitter.service.UserService;
 
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(("/posts"))
@@ -20,9 +24,12 @@ public class PostController {
     private final UserService userService;
     private final PostService postService;
 
-    public PostController(UserService userService, PostService postService) {
+    private final LikeService likeService;
+
+    public PostController(UserService userService, PostService postService, LikeService likeService) {
         this.userService = userService;
         this.postService = postService;
+        this.likeService = likeService;
     }
 
     @PostMapping
@@ -51,8 +58,8 @@ public class PostController {
     }
 
     @GetMapping
-    public ResponseEntity<List<PostResponseDto>> getOwnPosts(@RequestParam String username,
-                                                  @RequestParam (required = false) String timestamp){
+    public ResponseEntity<List<PostLikesResponseDto>> getOwnPosts(@RequestParam String username,
+                                                                  @RequestParam (required = false) String timestamp){
         Instant instant;
         User user = userService.getByUsername(username);
         List<Post> posts;
@@ -65,14 +72,23 @@ public class PostController {
             posts = postService.getPostsByUser(user);
         }
 
-        List<PostResponseDto> postsResponseDto = posts.stream()
-                .map(post -> new PostResponseDto(post.getId(), post.getUser().getUsername(),
-                        post.getMessage(),
-                        post.getTimestamp())).toList();
-        if (postsResponseDto.isEmpty()){
+        List<PostLikesResponseDto> PostLikesResponseDto = new ArrayList<>();
+        for (Post post : posts) {
+            PostLikesResponseDto postLikesResponseDto = new PostLikesResponseDto(post.getId(),
+                    post.getUser().getUsername(),
+                    post.getMessage(),
+                    post.getTimestamp());
+            List<String> likes = likeService.getLikesByPost(post).stream()
+                            .map(like -> like.getUser().getUsername())
+                                    .collect(Collectors.toList());
+
+            postLikesResponseDto.setLikes(likes);
+            PostLikesResponseDto.add(postLikesResponseDto);
+        }
+        if (PostLikesResponseDto.isEmpty()){
             return ResponseEntity.noContent().build();
         }
-        return ResponseEntity.ok(postsResponseDto);
+        return ResponseEntity.ok(PostLikesResponseDto);
     }
 
     @GetMapping("/feed")
